--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       <option value="uniform">Uniform</option>
       <option value="exponential">Exponential</option>
     </select><br />
-    <label for="model">Scoring Model:</label>
-    <select id="model">
+    <label for="plotModel">Scoring Model:</label>
+    <select id="plotModel">
       <option value="exponential">Exponential</option>
       <option value="linear">Linear</option>
       <option value="piecewise">Piecewise</option>
       <option value="sigmoid">Sigmoid</option>
     </select>
-    <label for="baseline">Baseline Score:</label>
-    <input type="number" id="baseline" value="35" min="0" max="100" />
+    <label for="plotBaseline">Baseline Score:</label>
+    <input type="number" id="plotBaseline" value="35" min="0" max="100" />
     <button onclick="generateAndPlot()">Simulate & Plot</button>
   </div>
 
@@ -44,8 +44,6 @@
       <option value="months">Months</option>
       <option value="days">Days</option>
     </select>
-    <label for="baseline">Baseline Score:</label>
-    <input type="number" id="baseline" value="35" min="0" max="100" />
     <label for="model">Scoring Model:</label>
     <select id="model">
       <option value="exponential">Exponential</option>
@@ -53,6 +51,8 @@
       <option value="piecewise">Piecewise</option>
       <option value="sigmoid">Sigmoid</option>
     </select>
+    <label for="baseline">Baseline Score:</label>
+    <input type="number" id="baseline" value="35" min="0" max="100" />
     <br />
     <button onclick="calculateScore()">Calculate Score</button>
     <p id="manualScore"></p>
