Updated plotting function to add histogram of age data distributions.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
   </div>
 
   <div class="chart-wrapper">
-    <canvas id="scoreChart"></canvas>
+    <div class="chart-container">
+      <canvas id="scoreChart"></canvas>
+    </div>
+    <div class="chart-container">
+      <canvas id="ageHistogram"></canvas>
+    </div>
   </div>
 
   <script src="script.js"></script>
