--- a/index.html
+++ b/index.html
@@ -31,39 +31,28 @@
   </div>
 
   <div class="section">
-    <h3>Manual Asset Score Calculator</h3>
-    <label>Installed Date:</label>
-    <input type="date" id="installedDate" /><br />
-    <label>Current Date:</label>
-    <input type="date" id="currentDate" /><br />
-    <label>Decay Rate (k):</label>
-    <input type="number" step="0.01" value="0.15" id="decayK" /><br />
-    <label>Granularity:</label>
+    <h2>Manual Asset Score Calculator</h2>
+    <label>Installed Date: </label><input type="date" id="installedDate"><br>
+    <label>Granularity: </label>
     <select id="granularity">
-      <option value="years">Years</option>
-      <option value="months">Months</option>
       <option value="days">Days</option>
-    </select>
-    <label for="model">Scoring Model:</label>
-    <select id="model">
-      <option value="exponential">Exponential</option>
-      <option value="linear">Linear</option>
-      <option value="piecewise">Piecewise</option>
-      <option value="sigmoid">Sigmoid</option>
-    </select>
-    <label for="baseline">Baseline Score:</label>
-    <input type="number" id="baseline" value="35" min="0" max="100" />
-    <br />
-    <button onclick="calculateScore()">Calculate Score</button>
-    <p id="manualScore"></p>
+      <option value="weeks">Weeks</option>
+      <option value="months">Months</option>
+      <option value="years" selected>Years</option>
+    </select><br>
+    <label>Decay Rate (k): </label><input type="number" id="decayRate" value="0.15" step="0.01"><br>
+    <label>Baseline Score: </label><input type="number" id="baseline" value="20"><br>
+    <label>Event Data (JSON): </label><textarea id="eventData" rows="5" cols="50"></textarea><br>
+    <button onclick="calculateAssetScore()">Get Asset Score</button>
+    <p id="output"></p>
   </div>
 
   <div class="chart-wrapper">
     <div class="chart-container">
-      <canvas id="scoreChart"></canvas>
+      <canvas id="scoreChart" width="480" height="400"></canvas>
     </div>
     <div class="chart-container">
-      <canvas id="ageHistogram"></canvas>
+      <canvas id="ageHistogram" width="480" height="400"></canvas>
     </div>
   </div>
 
